dos configuration file parser done

--- a/test/dosbox.conf
+++ b/test/dosbox.conf
@@ -43,7 +43,7 @@ usescancodes=true
 #             though few games might require a higher value.
 #             There is generally no speed advantage when raising this value.
 
-language=
+language=english
 machine=svga_s3
 captures=capture
 memsize=16
