Implementation of the parser in entry done in the test folder waiting for validation

--- a/test/test_entry/makefile
+++ b/test/test_entry/makefile
@@ -29,6 +29,7 @@ LIBS =  gtkmm-3.0\
 
 #sources 
 SRCARC  = $(SRCDIR)KeyValueParser.cpp\
+					$(SRCDIR)Entry.cpp\
 
 DEMOSRC  = $(SRCDIR)application.cpp\
 					 $(SRCARC)
